fixing a11y color contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,7 +126,7 @@
     --accent: 0, 0%, 96.1%;
     --accent-foreground: 0, 0%, 9%;
 
-    --destructive: 0, 84.2%, 60.2%;
+    --destructive: 0, 84.2%, 35%;
     --destructive-foreground: 0, 0%, 98%;
 
     --border: 0, 0%, 89.8%;
